examples/test/testpolicy17153.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17153
  namespace: namespace106
spec:
  podSelector:
    matchLabels:
      key33: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value32
          key3: value42
      podSelector:
        matchLabels:
          key3: value37
          key41: value8
